--- a/src/app/item/containers/item.component.html
+++ b/src/app/item/containers/item.component.html
@@ -1,4 +1,7 @@
 <div class="p-5">
+  <p class="display-4">Items</p>
+</div>
+<div class="px-5">
   <div class="p-5">
     <app-save-item></app-save-item>
   </div>
