--- a/src/app/item/components/items-list/items-list.component.html
+++ b/src/app/item/components/items-list/items-list.component.html
@@ -10,6 +10,25 @@
     <th mat-header-cell *matHeaderCellDef> Name </th>
     <td mat-cell *matCellDef="let row"> {{row.itemName}} </td>
   </ng-container>
+  <ng-container matColumnDef="dateCreated">
+    <th mat-header-cell *matHeaderCellDef> Creation Date </th>
+    <td mat-cell *matCellDef="let row"> {{row.dateCreated|date:'MMM d, y hh:mm:ss a'}} </td>
+  </ng-container>
+  <ng-container matColumnDef="dateModified">
+    <th mat-header-cell *matHeaderCellDef> Modification Date </th>
+    <td mat-cell *matCellDef="let row"> {{row.dateModified|date:'MMM d, y hh:mm:ss a'}} </td>
+  </ng-container>
+  <ng-container matColumnDef="isActive">
+    <th mat-header-cell *matHeaderCellDef> Active </th>
+    <td mat-cell *matCellDef="let row">
+      <button mat-icon-button *ngIf="row.isActive" (click)="toggleIsActive(row)">
+        <mat-icon color="primary">done</mat-icon>
+      </button>
+      <button mat-icon-button *ngIf="!row.isActive" (click)="toggleIsActive(row)">
+        <mat-icon color="warn">clear</mat-icon>
+      </button>
+    </td>
+  </ng-container>
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef> Actions </th>
     <td mat-cell *matCellDef="let row">
