--- a/src/app/item/components/save-item/save-item.component.html
+++ b/src/app/item/components/save-item/save-item.component.html
@@ -1,14 +1,21 @@
-<form [formGroup]="itemForm" (ngSubmit)="onSave()">
+<form [formGroup]="itemForm" novalidate (ngSubmit)="onSave()">
   <mat-form-field apparience="outline" hidden>
     <mat-label>ID</mat-label>
     <input matInput type="text" #id formControlName="id">
   </mat-form-field>
-  <mat-form-field class="d-block" apparience="outline">
+  <mat-slide-toggle #isActive color="primary" formControlName="isActive">
+    Item {{(itemForm.value.isActive) ? 'activated' : 'deactivated'}}
+  </mat-slide-toggle>
+  <mat-form-field class="d-block" appearance="outline">
     <mat-label>Name</mat-label>
     <input matInput type="text" #itemName formControlName="itemName">
+    <mat-hint>Enter the item name</mat-hint>
   </mat-form-field>
-  <div class="btn-block">
-    <button mat-raised-button class="mx-1" type="reset" (click)="onReset()" [disabled]="itemForm.invalid">Clear</button>
-    <button mat-raised-button class="mx-1" color="primary" type="submit" [disabled]="itemForm.invalid">Save</button>
-  </div>
+  <button mat-icon-button class="mx-1" type="reset" (click)="onReset()" [disabled]="itemForm.invalid">
+    <mat-icon>clear</mat-icon>
+  </button>
+  <button mat-raised-button class="mx-1 btn btn-info" type="submit" [disabled]="itemForm.invalid">
+    <mat-icon>save</mat-icon>
+  </button>
+
 </form>
