--- a/src/app/admin/containers/admin/admin.component.html
+++ b/src/app/admin/containers/admin/admin.component.html
@@ -1,29 +1,58 @@
-<div class="white px-4 section-header">
-  <h3>Administraci&oacute;n</h3>
-  <p class="grey-text pt-3">Cambia la configuraci&oacute;n de todos los usuarios de la aplicaci&oacute;n</p>
+<div class="px-5 py-3">
+  <div fxLayout="column" fxLayoutAlign="left">
+    <p class="display-4">Administraci&oacute;n</p>
+    <p class="mat-h1 text-black-50">
+      Cambia la configuraci&oacute;n de todos los usuarios de la
+      aplicaci&oacute;n
+    </p>
+  </div>
 </div>
 
-<div *ngIf="usersListLoading$ | async" class="d-flex justify-content-center align-items-center" style="margin-top: 300px">
-  <div class="spinner-grow text-primary" role="status" style="width: 4rem; height: 4rem;">
+<div
+  *ngIf="usersListLoading$ | async"
+  class="d-flex justify-content-center align-items-center"
+  style="margin-top: 300px"
+>
+  <div
+    class="spinner-grow text-primary"
+    role="status"
+    style="width: 4rem; height: 4rem"
+  >
     <span class="sr-only">Procesando...</span>
   </div>
 </div>
 
 <div *ngIf="!(usersListLoading$ | async)" class="container-fluid mt-3 pb-5">
-  <app-users-list *ngIf="!selectedUser" [users]="users$ | async" (userSelected)="onUserSelect($event)" (addAdmin)="addAdminPrivileges($event)"
-    (removeAdmin)="removeAdminPrivileges($event)"></app-users-list>
+  <app-users-list
+    *ngIf="!selectedUser"
+    [users]="users$ | async"
+    (userSelected)="onUserSelect($event)"
+    (addAdmin)="addAdminPrivileges($event)"
+    (removeAdmin)="removeAdminPrivileges($event)"
+  ></app-users-list>
   <app-user-detail
     *ngIf="selectedUser"
     [user]="selectedUser$ | async"
-    [projects]="userProjects$ | async"
-    [customers]="userCustomers$ | async"
-    [userProjectsLoading]="userProjectsLoading$ | async"
-    [userCustomersLoading]="userCustomersLoading$ | async"
     (detailsClosed)="onDetailsClose()"
-    (projectsLoad)="onProjectsLoad()"
+    (itemsLoad)="onItemsLoad()"
     (customersLoad)="onCustomersLoad()"
-    (projectDeleted)="onProjectDelete($event)"
-    (customerDeleted)="onCustomerDelete($event)"
     (addAdmin)="addAdminPrivileges($event)"
-    (removeAdmin)="removeAdminPrivileges($event)"></app-user-detail>
+    (removeAdmin)="removeAdminPrivileges($event)"
+  ></app-user-detail>
 </div>
+<!-- <app-user-detail
+  *ngIf="selectedUser"
+  [user]="selectedUser$ | async"
+  [items]="userItems$ | async"
+  [customers]="userCustomers$ | async"
+  [userItemsLoading]="userItemsLoading$ | async"
+  [userCustomersLoading]="userCustomersLoading$ | async"
+  (detailsClosed)="onDetailsClose()"
+  (itemsLoad)="onItemsLoad()"
+  (customersLoad)="onCustomersLoad()"
+  (itemDeleted)="onItemDelete($event)"
+  (customerDeleted)="onCustomerDelete($event)"
+  (addAdmin)="addAdminPrivileges($event)"
+  (removeAdmin)="removeAdminPrivileges($event)"
+></app-user-detail>
+ -->
