--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,20 @@
-<router-outlet></router-outlet>
+<header>
+  <app-header
+    [deviceXs]="deviceXs"
+    [user]="user$ | async"
+    [isLoggedIn]="isLoggedIn$ | async"
+    [isLoading]="isLoading$ | async"
+    [isAdmin]="isAdmin$ | async"
+    (logout)="onLogout($event)"
+  ></app-header>
+</header>
+<main>
+  <router-outlet></router-outlet>
+</main>
+<footer
+  [ngClass]="{
+    'footer-absolute': (isLoggedIn$ | async) || (isLoading$ | async)
+  }"
+>
+  <app-footer [deviceXs]="deviceXs"> </app-footer>
+</footer>
