--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<footer class="bg-dark text-center text-light pb-1">
+  <p>
+    2020 &copy; Julio César Melchor Pinto<a
+      mat-button
+      [routerLink]="['/privacy-policy']"
+      >Politicas de Privacidad</a
+    >
+  </p>
+</footer>
