--- a/src/app/core/components/wellcome/wellcome.component.html
+++ b/src/app/core/components/wellcome/wellcome.component.html
@@ -1,1 +1,32 @@
-<p>wellcome works!</p>
+<div class="container full-page-container">
+  <div class="row h-100 justify-content-center align-items-center">
+    <div class="text-center fadeIn animated">
+      <img
+        class="img-fluid"
+        [ngStyle]="{ height: '300px', width: 'auto' }"
+        src="assets/icons/rds-nobackground.png"
+      />
+      <p class="display-4">Escuela Rafael Díaz Serdán</p>
+      <h3 class="mat-h3 text-success">Servicio Remoto</h3>
+      <button
+        mat-raised-button
+        class="btn btn-success mb-2"
+        [routerLink]="['register']"
+      >
+        Registro
+      </button>
+      <p>
+        <small
+          >Ya tienes una cuenta?
+          <button
+            mat-raised-button
+            class="btn btn-info"
+            [routerLink]="['login']"
+          >
+            Entrar
+          </button></small
+        >
+      </p>
+    </div>
+  </div>
+</div>
