--- a/src/app/core/components/main/main.component.html
+++ b/src/app/core/components/main/main.component.html
@@ -1,3 +1,11 @@
+<div class="px-5 py-3">
+  <div fxLayout="column" fxLayoutAlign="left">
+    <p class="display-4">Bienvenido</p>
+    <p class="mat-h1 text-black-50">
+      Explora la app
+    </p>
+  </div>
+</div>
 <div class="py-5"></div>
 <div class="px-5 py-5">Bienvenido</div>
 <div class="px-0 py-5 bg-dark"></div>
