--- a/src/app/admin/components/user-detail/user-detail.component.html
+++ b/src/app/admin/components/user-detail/user-detail.component.html
@@ -32,7 +32,7 @@
       <div class="mt-3">
         <button *ngIf="!user.isAdmin" mat-button color="primary" (click)="onAddAdmin()">Asignar Administrador</button>
         <button *ngIf="user.isAdmin" mat-button color="accent" (click)="onRemoveAdmin()">Remover Administrador</button>
-        <button mat-button color="warn" (click)="loadCourses()">Ver cursos</button>
+        <button mat-button color="warn" (click)="loadItems()">Ver cursos</button>
       </div>
     </div>
 
@@ -42,13 +42,13 @@
       <h4 class="mr-3">Cursos</h4>
     </div>
 
-    <!--  <div *ngIf="userCoursesLoading" class="d-flex justify-content-center align-items-center" style="margin-top: 50px">
+    <div *ngIf="userItemsLoading" class="d-flex justify-content-center align-items-center" style="margin-top: 50px">
       <div class="spinner-grow text-primary" role="status" style="width: 4rem; height: 4rem;">
         <span class="sr-only">Loading...</span>
       </div>
-    </div> -->
-    <!-- <rds-courses-list *ngIf="!userCoursesLoading && courses" [editable]="false" [courses]="courses"
-      (courseDeleted)="onCourseDelete($event)">
-    </rds-courses-list> -->
+    </div>
+    <app-item-list *ngIf="!userItemsLoading && items" [editable]="false" [items]="items"
+      (itemDeleted)="onItemDelete($event)">
+    </app-item-list>
   </mat-card-content>
 </mat-card>
