--- a/src/app/admin/containers/admin/admin.component.html
+++ b/src/app/admin/containers/admin/admin.component.html
@@ -8,37 +8,20 @@
   </div>
 </div>
 
-<div
-  *ngIf="usersListLoading$ | async"
-  class="d-flex justify-content-center align-items-center"
-  style="margin-top: 300px"
->
-  <div
-    class="spinner-grow text-primary"
-    role="status"
-    style="width: 4rem; height: 4rem"
-  >
+<div *ngIf="usersListLoading$ | async" class="d-flex justify-content-center align-items-center"
+  style="margin-top: 300px">
+  <div class="spinner-grow text-primary" role="status" style="width: 4rem; height: 4rem">
     <span class="sr-only">Procesando...</span>
   </div>
 </div>
 
 <div *ngIf="!(usersListLoading$ | async)" class="container-fluid mt-3 pb-5">
-  <app-users-list
-    *ngIf="!selectedUser"
-    [users]="users$ | async"
-    (userSelected)="onUserSelect($event)"
-    (addAdmin)="addAdminPrivileges($event)"
-    (removeAdmin)="removeAdminPrivileges($event)"
-  ></app-users-list>
-  <app-user-detail
-    *ngIf="selectedUser"
-    [user]="selectedUser$ | async"
-    (detailsClosed)="onDetailsClose()"
-    (itemsLoad)="onItemsLoad()"
-    (customersLoad)="onCustomersLoad()"
-    (addAdmin)="addAdminPrivileges($event)"
-    (removeAdmin)="removeAdminPrivileges($event)"
-  ></app-user-detail>
+  <app-users-list *ngIf="!selectedUser" [users]="users$ | async" (userSelected)="onUserSelect($event)"
+    (addAdmin)="addAdminPrivileges($event)" (removeAdmin)="removeAdminPrivileges($event)"></app-users-list>
+  <app-user-detail *ngIf="selectedUser" [user]="selectedUser$ | async" [userItemsLoading]="userItemsLoading$ | async"
+    [items]="userItems$ | async" (detailsClosed)="onDetailsClose()" (itemsLoad)="onItemsLoad()"
+    (customersLoad)="onCustomersLoad()" (itemDeleted)="onItemDelete($event)" (addAdmin)="addAdminPrivileges($event)"
+    (removeAdmin)="removeAdminPrivileges($event)"></app-user-detail>
 </div>
 <!-- <app-user-detail
   *ngIf="selectedUser"
