google api and firebase success

--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid full-page-container">
+<div class="p-5">
   <div class="row h-100 justify-content-center align-items-center">
-    <div class="col-lg-4 col-sm-8">
-      <mat-card [class.mat-elevation-z6]="true">
+    <div class="col-lg-3 col-sm-6">
+      <mat-card [class.mat-elevation-z6]="false">
         <mat-card-header class="py-4">
           <mat-card-title>Registro</mat-card-title>
           <img mat-card-avatar src="assets/icons/rds-nobackground.png">
