--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid full-page-container">
+<div class="p-5">
   <div class="row h-100 justify-content-center align-items-center">
     <div class="col-lg-3 col-sm-6">
-      <mat-card [class.mat-elevation-z4]="true">
+      <mat-card [class.mat-elevation-z4]="false">
         <mat-card-header class="py-4">
           <mat-card-title>Inicio de sesión</mat-card-title>
           <img mat-card-avatar src="assets/icons/rds-nobackground.png">
