--- a/src/app/core/components/home/home.component.html
+++ b/src/app/core/components/home/home.component.html
@@ -1,19 +1,7 @@
-<div
-  *ngIf="isLoading$ | async"
-  class="d-flex justify-content-center align-items-center"
-  style="margin-top: 400px"
->
-  <div
-    class="spinner-grow text-primary"
-    role="status"
-    style="width: 4rem; height: 4rem"
-  >
-    <span class="sr-only">Cargando...</span>
-  </div>
+<div *ngIf="isLoading$ | async" class="d-flex justify-content-center align-items-center">
+  <mat-progress-spinner mode="indeterminate">
+  </mat-progress-spinner>
+  <span class="sr-only">Cargando...</span>
 </div>
-<app-wellcome
-  *ngIf="!(isLoggedIn$ | async) && !(isLoading$ | async)"
-></app-wellcome>
-<app-dashboard
-  *ngIf="(isLoggedIn$ | async) && !(isLoading$ | async)"
-></app-dashboard>
+<app-wellcome *ngIf="!(isLoggedIn$ | async) && !(isLoading$ | async)"></app-wellcome>
+<app-dashboard *ngIf="(isLoggedIn$ | async) && !(isLoading$ | async)"></app-dashboard>
