--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,6 @@
 <main>
   <router-outlet></router-outlet>
 </main>
-<footer [ngClass]="{
-    'footer-absolute': (isLoggedIn$ | async) || (isLoading$ | async)
-  }">
+<footer [ngClass]="{'footer-absolute': (isLoggedIn$ | async) || (isLoading$ | async)}">
   <app-footer [deviceXs]="deviceXs"> </app-footer>
 </footer>
