--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,8 @@ body {
 
 body {
   margin: 0;
+
   /* font-family: Roboto, "Helvetica Neue", sans-serif; */
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
