--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,10 +1,10 @@
 <div class="p-5">
   <div class="row h-100 justify-content-center align-items-center">
     <div class="col-lg-3 col-sm-6">
-      <mat-card [class.mat-elevation-z6]="false">
+      <mat-card [class.mat-elevation-z4]="true">
         <mat-card-header class="py-4">
           <mat-card-title>Registro</mat-card-title>
-          <img mat-card-avatar src="assets/icons/rds-nobackground.png">
+          <img mat-card-avatar src="assets/images/rds-circle.png">
         </mat-card-header>
         <mat-card-content>
           <div *ngIf="error$ | async as error" class="alert alert-danger" role="alert">
